[package]
name = "multi-value-reverse-polyfill"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"

[dependencies]
walrus = "0.19.0"
wasm-bindgen-multi-value-xform = "0.2.69"
wasm-bindgen-wasm-conventions = "0.2.69"
wit-text = "0.8.0"
wit-validator = "0.2.1"
wit-walrus = "0.6.0"
